# FinAuditAgent-public

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: 00_architecture.md  01_sandbox_guide.md  02_text_to_sql_guide.md  03_rbac_token_passthrough.md  04_graph_hitl_saga.md  05_doc_rag_layout.md  06_evals_observability.md  07_lineage_redteam.md
evals/: __init__.py  evaluators.py  redteam_suite.py  run_eval.py
evals/datasets/: e2e_tasks.jsonl  rag_faithfulness.jsonl  text2sql_golden.jsonl
examples/: 01_sandbox_number_verifier.py  02_sql_schema_linking.py  03_rbac_token_passthrough.py  04_graph_hitl_demo.py  05_layout_rag_mini.py  06_saga_rollback.py  07_end_to_end_audit.py
fin_audit_agent/: __init__.py  cli.py  config.py
fin_audit_agent/auth/: __init__.py  audit_log.py  column_tagger.py  injection_guard.py  oauth.py  policy_engine.py  redactor.py  token_context.py
fin_audit_agent/graph/: __init__.py  builder.py  checkpoint.py  edges.py  hitl.py  nodes.py  saga.py  state.py
fin_audit_agent/lineage/: __init__.py  tracker.py
fin_audit_agent/observability/: __init__.py  cost_budget.py  langfuse_setup.py  otel_setup.py  semantic_cache.py
fin_audit_agent/rag/: __init__.py  citation.py  hybrid_retriever.py  kv_extractor.py  layout.py  multimodal_packer.py  reranker.py  semantic_chunker.py  table_extractor.py
sandbox_image/: Dockerfile  entrypoint.py
tests/: conftest.py  test_graph_resume.py  test_rbac_passthrough.py  test_saga_compensation.py  test_sandbox_isolation.py  test_sql_readonly.py
(+20 files in other folders)
